--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "axios": "^1.13.2",
+    "form-data": "^4.0.5",
     "nodemon": "^3.0.2"
   }
 }
