--- a/package.json
+++ b/package.json
@@ -29,13 +29,15 @@
     "express-rate-limit": "^7.1.5",
     "express-validator": "^7.0.1",
     "helmet": "^7.1.0",
+    "hpp": "^0.2.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.0",
     "morgan": "^1.10.0",
     "multer": "^2.0.2",
     "nodemailer": "^6.9.7",
     "stripe": "^14.7.0",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "xss-clean": "^0.1.4"
   },
   "devDependencies": {
     "axios": "^1.13.2",
