--- a/.gitignore
+++ b/.gitignore
@@ -1,39 +1,46 @@
 # Dependencies
 node_modules/
+package-lock.json
 
-# Environment variables
+# Environment Variables
 .env
-.env.local
 .env.production
+.env.local
 
 # Logs
-logs
+logs/
 *.log
 npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+pm2*.log
 
-# Operating System
-.DS_Store
-Thumbs.db
+# Uploads
+uploads/*
+!uploads/.gitkeep
 
 # IDE
 .vscode/
 .idea/
 *.swp
-*.swo
-*~
 
-# Uploads (if storing locally temporarily)
-uploads/
-temp/
+# OS
+.DS_Store
+Thumbs.db
 
-# Build files
+# Production
 dist/
 build/
 
-# Testing
+# PM2
+.pm2/
+pids/
+*.pid
+*.seed
+*.pid.lock
+
+# Coverage
 coverage/
+.nyc_output/
 
 # Misc
 .cache/
+temp/
