--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "nodemailer": "^6.9.7",
     "stripe": "^14.7.0",
     "uuid": "^9.0.1",
+    "winston": "^3.18.3",
+    "winston-daily-rotate-file": "^5.0.0",
     "xss-clean": "^0.1.4"
   },
   "devDependencies": {
