--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "multer": "^2.0.2",
     "nodemailer": "^6.9.7",
     "pm2": "^6.0.14",
+    "resend": "^6.6.0",
     "stripe": "^14.7.0",
     "uuid": "^9.0.1",
     "winston": "^3.18.3",
